Add ag grid in lib

--- a/apps/rahul-test/src/app/app.component.html
+++ b/apps/rahul-test/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-nx-welcome></app-nx-welcome>
+<!-- <app-nx-welcome></app-nx-welcome> -->
+ <lib-ag-grid-poc></lib-ag-grid-poc>
 <router-outlet></router-outlet>
