--- a/apps/rahul-test/src/app/app.component.html
+++ b/apps/rahul-test/src/app/app.component.html
@@ -1,3 +1,15 @@
 <!-- <app-nx-welcome></app-nx-welcome> -->
- <lib-ag-grid-poc></lib-ag-grid-poc>
+
+<div class="splitter-conatiner">
+  <as-split [direction]="'horizontal'">
+    <as-split-area>
+      <div>Grid Container </div>
+      <lib-ag-grid-poc></lib-ag-grid-poc>
+    </as-split-area>
+    <as-split-area>
+      <div>Chart Container </div>
+      <lib-arc-gis-poc></lib-arc-gis-poc>
+    </as-split-area>
+  </as-split>
+</div>
 <router-outlet></router-outlet>
