--- a/apps/rahul-test/src/app/app.component.html
+++ b/apps/rahul-test/src/app/app.component.html
@@ -16,7 +16,8 @@
     </as-split-area>
     <as-split-area>
       <div>Chart Container</div>
-      <lib-arc-gis-poc></lib-arc-gis-poc>
+      <!-- <lib-arc-gis-poc></lib-arc-gis-poc> -->
+      <lib-d3-line-chart></lib-d3-line-chart>
     </as-split-area>
   </as-split>
 </div>
