--- a/apps/rahul-test/src/app/app.component.html
+++ b/apps/rahul-test/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <div class="splitter-conatiner">
   <as-split [direction]="'horizontal'">
-    <as-split-area>
+    <as-split-area [size]="20">
       <as-split [direction]="'vertical'">
         <as-split-area>
           <h2>Todo Container</h2>
