Add feature layer with markers

--- a/apps/rahul-test/src/app/app.component.html
+++ b/apps/rahul-test/src/app/app.component.html
@@ -10,7 +10,7 @@
         </as-split-area>
         <as-split-area>
           <h2>User Container</h2>
-          <lib-ag-grid-multi [userInfo]="agMultiInfo$ | async"></lib-ag-grid-multi>
+          <!-- <lib-ag-grid-multi [userInfo]="agMultiInfo$ | async"></lib-ag-grid-multi> -->
         </as-split-area>
       </as-split>
     </as-split-area>
